# xkcdcolors

./: README.md  pyproject.toml  xkcdcolors.py
src/xkcdcolors/: __init__.py  xkcdcolors.py
