[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "xkcdcolors"
version = "0.0.2"
authors = [
  { name="Jeremy Welsh-Kavan", email="jeremy@micromelody.net" },
]
description = "A package full of colors"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeremyiwk/xkcdcolors"
